tests/paczka1/fuzzy1/44061776.err
Error in line 5: 5b7X6r A465 0,9
Error in line 4: IPu A465 95,4
Error in line 8: a7CZTxQ S86 8,0
Error in line 33: sLQpbinmP3P S86 89,45
Error in line 32: IPu S914 21,0
Error in line 36: sLQpbinmP3P S86 113,7
